NIFI-10698: fix spacing between dropdowns

--- a/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-ui/src/main/webapp/css/common-ui.css
+++ b/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-ui/src/main/webapp/css/common-ui.css
@@ -426,10 +426,6 @@ input.filter {
     margin-bottom: 5px;
 }
 
-.filter-status-dropdown {
-    margin-left: 5px;
-}
-
 .setting-field.summary-filter-primary-node-container {
     display: inline-block;
     margin-left: 10px;
